<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <!--  Application Info -->
    <string name="app_name">SAP ABAP Quiz</string>
    <string name="hanu_quiz">Powered by: Hanu-Quiz</string>
    <string name="AppURL">http://hanu-quiz.varunverma.org/Applications/AQ</string>
    
    <!-- Menu Items -->
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    
    <!-- UI Texts -->
    <string name="evluate_quiz">Evaluate Quiz</string>
    <string name="done">Done</string>
    <string name="quiz_result">10/10</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="accept">I Agree</string>
    <string name="loading">Loading....</string>
    <string name="swipe_help">Swipe to the Right / Left to move to the previous / next question</string>
    <string name="show_help_again">Don\'t show this again</string>
    <string name="ok_got_it">OK. Got it !</string>
    
    <string-array name="DifficultyLevel">
        <item >Beginner</item>
        <item >Advanced</item>
        <item >Expert</item>
    </string-array>

</resources>
